Fix zoom on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
     -khtml-user-select: none; /* Konqueror HTML */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* Internet Explorer/Edge */
+    touch-action: pan-y;
 }
 
 .console-view {
